--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests yet\"",
+    "prepare": "husky"
   },
   "engines": {
     "node": ">=18"
@@ -24,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
     "eslint": "^9.34.0",
+    "husky": "^9.1.7",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   }
